# tesserae-pi-png-client

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install-service.sh  install.sh  tesserae-pi-png-client.service.in
src/tesserae_pi_png_client/: __main__.py  bootstrap_config.py  config.py  heartbeat.py  main.py  mqtt_loop.py  paint.py  transforms.py
tests/: test_config.py  test_heartbeat.py  test_mqtt_loop.py  test_paint.py  test_transforms.py
